Fix Authentication Stability Issues

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZK.AI Client Portal - AI Workflow Management</title>
-    <meta name="description" content="Manage your AI workflows, analytics, and automation with ZK.AI's powerful client portal. Track performance, monitor executions, and optimize your business processes.">
-    <meta name="keywords" content="AI, automation, workflows, analytics, n8n, business process, ZK.AI">
-    <meta name="author" content="ZK.AI">
-    <meta property="og:title" content="ZK.AI Client Portal - AI Workflow Management">
-    <meta property="og:description" content="Manage your AI workflows, analytics, and automation with ZK.AI's powerful client portal.">
+    <title>ClientsHub - Client Portal & Workflow Management</title>
+    <meta name="description" content="Manage your workflows, analytics, and automation with ClientsHub's powerful client portal. Track performance, monitor executions, and optimize your business processes.">
+    <meta name="keywords" content="client portal, workflows, analytics, automation, business process, ClientsHub">
+    <meta name="author" content="ClientsHub">
+    <meta property="og:title" content="ClientsHub - Client Portal & Workflow Management">
+    <meta property="og:description" content="Manage your workflows, analytics, and automation with ClientsHub's powerful client portal.">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="ZK.AI">
+    <meta property="og:site_name" content="ClientsHub">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="ZK.AI Client Portal">
-    <meta name="twitter:description" content="Manage your AI workflows, analytics, and automation with ZK.AI's powerful client portal.">
+    <meta name="twitter:title" content="ClientsHub Client Portal">
+    <meta name="twitter:description" content="Manage your workflows, analytics, and automation with ClientsHub's powerful client portal.">
     <meta name="robots" content="index, follow">
     <style>
       /* Prevent flash of unstyled content */
@@ -54,7 +54,7 @@
         <div>
           <div class="loading-spinner"></div>
           <div style="margin-top: 16px; text-align: center;">
-            <h1 style="font-size: 20px; font-weight: bold; margin: 0;">ZK.AI</h1>
+            <h1 style="font-size: 20px; font-weight: bold; margin: 0;">ClientsHub</h1>
             <p style="font-size: 14px; margin: 8px 0 0 0; opacity: 0.8;">Loading your workspace...</p>
           </div>
         </div>
